--- a/basics_of_tensorflow.ipynb
+++ b/basics_of_tensorflow.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,22 +372,317 @@
     "print(tf.random.shuffle(not_suffled, seed=42))\n",
     "print(tf.random.shuffle(not_suffled, seed=42))\n",
     "\n",
-    "#"
+    "# both operation and global seeds are used to generate a random sequence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### other ways to make tensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10, 7), dtype=float32, numpy=\n",
+       "array([[1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1., 1., 1.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a tensor of all 1s\n",
+    "tf.ones([10, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10, 7), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a tensor of all 0s\n",
+    "tf.zeros(shape=(10, 7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### turn numpy arrays into tensors\n",
+    "\n",
+    "main differnece between numpy arrays and tf tensors is that tensors run faster on a GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[ 1  2  3  4]\n",
+      "  [ 5  6  7  8]\n",
+      "  [ 9 10 11 12]]\n",
+      "\n",
+      " [[13 14 15 16]\n",
+      "  [17 18 19 20]\n",
+      "  [21 22 23 24]]], shape=(2, 3, 4), dtype=int32)\n",
+      "tf.Tensor([ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24], shape=(24,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#make numpy array\n",
+    "numpy_a = np.arange(1, 25, dtype=np.int32)\n",
+    "#set array to tensor\n",
+    "A = tf.constant(numpy_a, shape=(2, 3, 4))\n",
+    "print(A)\n",
+    "B = tf.constant(numpy_a)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### getting info from tensors\n",
+    "\n",
+    "* shape\n",
+    "* rank\n",
+    "* axis/dimension\n",
+    "* size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([2, 3, 4])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#shape \n",
+    "A.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "A.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]], shape=(3, 4), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[ 5  6  7  8]\n",
+      " [17 18 19 20]], shape=(2, 4), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# axis/dimension\n",
+    "print(A[0]) # pulls first dimenstion\n",
+    "print(A[:, 1]) #pulls first axis in all dimenbtions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=24>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.size(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3, 4, 5), dtype=float32, numpy=\n",
+       "array([[[[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.],\n",
+       "         [0., 0., 0., 0., 0.]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create rank 4 tensor \n",
+    "rank_4_tensor = tf.zeros(shape=[2, 3, 4, 5])\n",
+    "rank_4_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([2, 3, 4, 5]), 4, <tf.Tensor: shape=(), dtype=int32, numpy=120>)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_4_tensor.shape, rank_4_tensor.ndim, tf.size(rank_4_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.size(rank_4_tensor).numpy()"
+   ]
   },
   {
    "cell_type": "code",
