add work for matrix manipulation

--- a/basics_of_tensorflow.ipynb
+++ b/basics_of_tensorflow.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        "         [0., 0., 0., 0., 0.]]]], dtype=float32)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "(TensorShape([2, 3, 4, 5]), 4, <tf.Tensor: shape=(), dtype=int32, numpy=120>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -675,13 +675,699 @@
        "120"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tf.size(rank_4_tensor).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### indexing tensor "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2, 2, 2), dtype=float32, numpy=\n",
+       "array([[[[0., 0.],\n",
+       "         [0., 0.]],\n",
+       "\n",
+       "        [[0., 0.],\n",
+       "         [0., 0.]]],\n",
+       "\n",
+       "\n",
+       "       [[[0., 0.],\n",
+       "         [0., 0.]],\n",
+       "\n",
+       "        [[0., 0.],\n",
+       "         [0., 0.]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get first two elements of each dimention \n",
+    "rank_4_tensor[:2, :2, :2, :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1, 1, 5), dtype=float32, numpy=array([[[[0., 0., 0., 0., 0.]]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the first element from each dimention minus the final one\n",
+    "rank_4_tensor[:1, :1, :1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([2, 2]), 2, <tf.Tensor: shape=(), dtype=int32, numpy=4>)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a rank 2 tensor\n",
+    "rank_2_tensor = tf.constant([[10, 7],[3,4]])\n",
+    "rank_2_tensor.shape, rank_2_tensor.ndim, tf.size(rank_2_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([7, 4])>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_2_tensor[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+       "array([[[10],\n",
+       "        [ 7]],\n",
+       "\n",
+       "       [[ 3],\n",
+       "        [ 4]]])>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add extra dim to rank 2 tensor \n",
+    "rank_3_tensor = rank_2_tensor[..., tf.newaxis]\n",
+    "rank_3_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2, 1), dtype=int32, numpy=\n",
+       "array([[[10],\n",
+       "        [ 7]],\n",
+       "\n",
+       "       [[ 3],\n",
+       "        [ 4]]])>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#alternitive for above\n",
+    "tf.expand_dims(rank_2_tensor, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 2, 2), dtype=int32, numpy=\n",
+       "array([[[10,  7],\n",
+       "        [ 3,  4]]])>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.expand_dims(rank_2_tensor, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### manipulating tensors (tensor operations)\n",
+    "\n",
+    "**basic operations**\n",
+    "`+` `-` `*` `/`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[20, 17],\n",
+       "        [13, 14]])>,\n",
+       " <tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[20,  8],\n",
+       "        [13,  5]])>,\n",
+       " <tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[10,  7],\n",
+       "        [ 3,  4]])>)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor = tf.constant([[10, 7],[3,4]])\n",
+    "tensor + 10, tensor + [10, 1], tensor\n",
+    "# tensor does not change unless we set it to itsself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[100,  70],\n",
+       "        [ 30,  40]])>,\n",
+       " <tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[100,   7],\n",
+       "        [ 30,   4]])>)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor * 10, tensor * [10, 1], "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[ 0, -3],\n",
+       "        [-7, -6]])>,\n",
+       " <tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       " array([[ 0,  6],\n",
+       "        [-7,  3]])>)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor - 10, tensor - [10, 1], "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[100,  70],\n",
+       "       [ 30,  40]])>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tensor flow funtions can be use as well\n",
+    "tf.multiply(tensor, 10) # using tf is faster on a gpu then tensor * 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**matrix multiplication**\n",
+    "\n",
+    "matrix multiplication is the most common operators\n",
+    "\n",
+    "rules for tensors\n",
+    "1. Inner dimentions must match\n",
+    "2. Resulting matrix has the shape of inner dimentions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[121,  98],\n",
+       "       [ 42,  37]])>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(tensor, tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[100,  49],\n",
+       "       [  9,  16]])>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor * tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[121,  98],\n",
+       "       [ 42,  37]])>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor @ tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])>,\n",
+       " TensorShape([3, 2]),\n",
+       " <tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[ 7,  8],\n",
+       "        [ 9, 10],\n",
+       "        [11, 12]])>,\n",
+       " TensorShape([3, 2]))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.constant([[1, 2],[3,4], [5, 6]])\n",
+    "\n",
+    "y = tf.constant([[7, 8],[9,10], [11, 12]])\n",
+    "x , x.shape, y, y.shape\n",
+    "\n",
+    "# tf.matmul(x, y) can't be done since x and y inner dimentions don't match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       "array([[ 7,  8,  9],\n",
+       "       [10, 11, 12]])>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to multiply these matrix's we can reshape one or both\n",
+    "#change shape of y\n",
+    "tf.reshape(y, shape=(2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+       "array([[ 27,  30,  33],\n",
+       "       [ 61,  68,  75],\n",
+       "       [ 95, 106, 117]])>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now we can multiply them\n",
+    "tf.matmul(x, tf.reshape(y, shape=(2,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([3, 2]), TensorShape([2, 3]))"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape, tf.reshape(y, shape=(2,3)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[ 58,  64],\n",
+       "       [139, 154]])>"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(tf.reshape(x, shape=(2,3)), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TensorShape([2, 3]), TensorShape([3, 2]))"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.reshape(x, shape=(2,3)).shape, y.shape\n",
+    "# resulting matrixes are the size of the outer dimentions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[1, 2],\n",
+       "        [3, 4],\n",
+       "        [5, 6]])>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       " array([[1, 3, 5],\n",
+       "        [2, 4, 6]])>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       " array([[1, 2, 3],\n",
+       "        [4, 5, 6]])>)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# can do the same with transpose \n",
+    "x, tf.transpose(x), tf.reshape(x, shape=(2,3))\n",
+    "\n",
+    "# transpose flips the dimentions while reshape with shuffle the matrix to fit the shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[ 89,  98],\n",
+       "       [116, 128]])>"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(tf.transpose(x), y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[ 89, 116],\n",
+       "       [ 98, 128]])>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.matmul(tf.transpose(y), x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**dot products**\n",
+    "\n",
+    "matrix multiplcation is also know as dot product. \n",
+    "\n",
+    "you can preform this using\n",
+    "* `tf.matmul`\n",
+    "* `tf.tesnordot`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3, 3), dtype=int32, numpy=\n",
+       "array([[ 23,  29,  35],\n",
+       "       [ 53,  67,  81],\n",
+       "       [ 83, 105, 127]])>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preform the dot product on x and y\n",
+    "tf.tensordot(x, tf.transpose(y), axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+       "array([[ 89,  98],\n",
+       "       [116, 128]])>"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.tensordot(tf.transpose(x), y, axes=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(3, 2), dtype=int32, numpy=\n",
+       " array([[ 7,  8],\n",
+       "        [ 9, 10],\n",
+       "        [11, 12]])>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       " array([[ 7,  9, 11],\n",
+       "        [ 8, 10, 12]])>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       " array([[ 7,  8,  9],\n",
+       "        [10, 11, 12]])>)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y, tf.transpose(y), tf.reshape(y, shape=(2,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### changing data types"
    ]
   },
   {
