--- a/Classification_pt1.ipynb
+++ b/Classification_pt1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "       [ 0.28105665,  0.96382443]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2497,7 +2497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -2506,46 +2506,220 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "25/25 [==============================] - 1s 8ms/step - loss: 0.6837 - accuracy: 0.5600\n",
-      "Epoch 2/20\n",
-      "25/25 [==============================] - 0s 7ms/step - loss: 0.6744 - accuracy: 0.5750\n",
-      "Epoch 3/20\n",
-      "25/25 [==============================] - 0s 5ms/step - loss: 0.6626 - accuracy: 0.5875\n",
-      "Epoch 4/20\n",
-      "25/25 [==============================] - 0s 5ms/step - loss: 0.6332 - accuracy: 0.6388\n",
-      "Epoch 5/20\n",
-      "25/25 [==============================] - 0s 6ms/step - loss: 0.5830 - accuracy: 0.7563\n",
-      "Epoch 6/20\n",
-      "25/25 [==============================] - 0s 5ms/step - loss: 0.4907 - accuracy: 0.8313\n",
-      "Epoch 7/20\n",
-      "25/25 [==============================] - 0s 5ms/step - loss: 0.4251 - accuracy: 0.8450\n",
-      "Epoch 8/20\n",
-      "25/25 [==============================] - 0s 5ms/step - loss: 0.3596 - accuracy: 0.8875\n",
-      "Epoch 9/20\n",
-      "25/25 [==============================] - 0s 7ms/step - loss: 0.3152 - accuracy: 0.9100\n",
-      "Epoch 10/20\n",
+      "Epoch 1/100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gonz3\\anaconda3\\lib\\site-packages\\keras\\optimizers\\optimizer_v2\\adam.py:110: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+      "  super(Adam, self).__init__(name, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25/25 [==============================] - 1s 4ms/step - loss: 0.6837 - accuracy: 0.5600\n",
+      "Epoch 2/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.6744 - accuracy: 0.5750\n",
+      "Epoch 3/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.6626 - accuracy: 0.5875\n",
+      "Epoch 4/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.6332 - accuracy: 0.6388\n",
+      "Epoch 5/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.5830 - accuracy: 0.7563\n",
+      "Epoch 6/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.4907 - accuracy: 0.8313\n",
+      "Epoch 7/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.4251 - accuracy: 0.8450\n",
+      "Epoch 8/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.3596 - accuracy: 0.8875\n",
+      "Epoch 9/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.3152 - accuracy: 0.9100\n",
+      "Epoch 10/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.2512 - accuracy: 0.9500\n",
-      "Epoch 11/20\n",
+      "Epoch 11/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.2152 - accuracy: 0.9500\n",
-      "Epoch 12/20\n",
+      "Epoch 12/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.1721 - accuracy: 0.9750\n",
-      "Epoch 13/20\n",
-      "25/25 [==============================] - 0s 4ms/step - loss: 0.1443 - accuracy: 0.9837\n",
-      "Epoch 14/20\n",
+      "Epoch 13/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.1443 - accuracy: 0.9837\n",
+      "Epoch 14/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.1232 - accuracy: 0.9862\n",
-      "Epoch 15/20\n",
+      "Epoch 15/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.1085 - accuracy: 0.9850\n",
-      "Epoch 16/20\n",
-      "25/25 [==============================] - 0s 4ms/step - loss: 0.0940 - accuracy: 0.9937\n",
-      "Epoch 17/20\n",
+      "Epoch 16/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0940 - accuracy: 0.9937\n",
+      "Epoch 17/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.0827 - accuracy: 0.9962\n",
-      "Epoch 18/20\n",
+      "Epoch 18/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.0798 - accuracy: 0.9937\n",
-      "Epoch 19/20\n",
+      "Epoch 19/100\n",
       "25/25 [==============================] - 0s 4ms/step - loss: 0.0845 - accuracy: 0.9875\n",
-      "Epoch 20/20\n",
-      "25/25 [==============================] - 0s 4ms/step - loss: 0.0790 - accuracy: 0.9887\n"
+      "Epoch 20/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0790 - accuracy: 0.9887\n",
+      "Epoch 21/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0569 - accuracy: 0.9962\n",
+      "Epoch 22/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0644 - accuracy: 0.9875\n",
+      "Epoch 23/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0606 - accuracy: 0.9887\n",
+      "Epoch 24/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0616 - accuracy: 0.9850\n",
+      "Epoch 25/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0590 - accuracy: 0.9900\n",
+      "Epoch 26/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0494 - accuracy: 0.9950\n",
+      "Epoch 27/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0431 - accuracy: 0.9950\n",
+      "Epoch 28/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0417 - accuracy: 0.9950\n",
+      "Epoch 29/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0395 - accuracy: 0.9950\n",
+      "Epoch 30/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0402 - accuracy: 0.9912\n",
+      "Epoch 31/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0444 - accuracy: 0.9887\n",
+      "Epoch 32/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0503 - accuracy: 0.9862\n",
+      "Epoch 33/100\n",
+      "25/25 [==============================] - 0s 5ms/step - loss: 0.0651 - accuracy: 0.9762\n",
+      "Epoch 34/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0399 - accuracy: 0.9950\n",
+      "Epoch 35/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0465 - accuracy: 0.9887\n",
+      "Epoch 36/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0398 - accuracy: 0.9875\n",
+      "Epoch 37/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0345 - accuracy: 0.9925\n",
+      "Epoch 38/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0296 - accuracy: 0.9937\n",
+      "Epoch 39/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0279 - accuracy: 0.9950\n",
+      "Epoch 40/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0295 - accuracy: 0.9900\n",
+      "Epoch 41/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0300 - accuracy: 0.9950\n",
+      "Epoch 42/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0421 - accuracy: 0.9887\n",
+      "Epoch 43/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0234 - accuracy: 0.9962\n",
+      "Epoch 44/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0344 - accuracy: 0.9900\n",
+      "Epoch 45/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0227 - accuracy: 0.9975\n",
+      "Epoch 46/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0248 - accuracy: 0.9937\n",
+      "Epoch 47/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0227 - accuracy: 0.9962\n",
+      "Epoch 48/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0325 - accuracy: 0.9887\n",
+      "Epoch 49/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0228 - accuracy: 0.9937\n",
+      "Epoch 50/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0344 - accuracy: 0.9875\n",
+      "Epoch 51/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0327 - accuracy: 0.9875\n",
+      "Epoch 52/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0447 - accuracy: 0.9837\n",
+      "Epoch 53/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0324 - accuracy: 0.9875\n",
+      "Epoch 54/100\n",
+      "25/25 [==============================] - 0s 7ms/step - loss: 0.0244 - accuracy: 0.9900\n",
+      "Epoch 55/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0248 - accuracy: 0.9925\n",
+      "Epoch 56/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0443 - accuracy: 0.9825\n",
+      "Epoch 57/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0747 - accuracy: 0.9725\n",
+      "Epoch 58/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0366 - accuracy: 0.9875\n",
+      "Epoch 59/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0769 - accuracy: 0.9750\n",
+      "Epoch 60/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0644 - accuracy: 0.9812\n",
+      "Epoch 61/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0312 - accuracy: 0.9912\n",
+      "Epoch 62/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0265 - accuracy: 0.9937\n",
+      "Epoch 63/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0305 - accuracy: 0.9900\n",
+      "Epoch 64/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0317 - accuracy: 0.9912\n",
+      "Epoch 65/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0258 - accuracy: 0.9950\n",
+      "Epoch 66/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0208 - accuracy: 0.9925\n",
+      "Epoch 67/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0193 - accuracy: 0.9975\n",
+      "Epoch 68/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0205 - accuracy: 0.9975\n",
+      "Epoch 69/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0167 - accuracy: 0.9950\n",
+      "Epoch 70/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0343 - accuracy: 0.9850\n",
+      "Epoch 71/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0479 - accuracy: 0.9812\n",
+      "Epoch 72/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0380 - accuracy: 0.9837\n",
+      "Epoch 73/100\n",
+      "25/25 [==============================] - 0s 5ms/step - loss: 0.0217 - accuracy: 0.9950\n",
+      "Epoch 74/100\n",
+      "25/25 [==============================] - 0s 6ms/step - loss: 0.0214 - accuracy: 0.9950\n",
+      "Epoch 75/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0334 - accuracy: 0.9875\n",
+      "Epoch 76/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0307 - accuracy: 0.9875\n",
+      "Epoch 77/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0370 - accuracy: 0.9900\n",
+      "Epoch 78/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0153 - accuracy: 0.9987\n",
+      "Epoch 79/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0160 - accuracy: 0.9962\n",
+      "Epoch 80/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0288 - accuracy: 0.9887\n",
+      "Epoch 81/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0205 - accuracy: 0.9925\n",
+      "Epoch 82/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0147 - accuracy: 0.9962\n",
+      "Epoch 83/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0263 - accuracy: 0.9900\n",
+      "Epoch 84/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0424 - accuracy: 0.9875\n",
+      "Epoch 85/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0304 - accuracy: 0.9837\n",
+      "Epoch 86/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0205 - accuracy: 0.9962\n",
+      "Epoch 87/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0234 - accuracy: 0.9937\n",
+      "Epoch 88/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0216 - accuracy: 0.9925\n",
+      "Epoch 89/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0182 - accuracy: 0.9975\n",
+      "Epoch 90/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0134 - accuracy: 0.9987\n",
+      "Epoch 91/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0130 - accuracy: 0.9975\n",
+      "Epoch 92/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0258 - accuracy: 0.9912\n",
+      "Epoch 93/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0113 - accuracy: 1.0000\n",
+      "Epoch 94/100\n",
+      "25/25 [==============================] - 0s 5ms/step - loss: 0.0136 - accuracy: 0.9950\n",
+      "Epoch 95/100\n",
+      "25/25 [==============================] - 0s 6ms/step - loss: 0.0295 - accuracy: 0.9887\n",
+      "Epoch 96/100\n",
+      "25/25 [==============================] - 0s 6ms/step - loss: 0.0165 - accuracy: 0.9912\n",
+      "Epoch 97/100\n",
+      "25/25 [==============================] - 0s 3ms/step - loss: 0.0219 - accuracy: 0.9937\n",
+      "Epoch 98/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0166 - accuracy: 0.9950\n",
+      "Epoch 99/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0243 - accuracy: 0.9962\n",
+      "Epoch 100/100\n",
+      "25/25 [==============================] - 0s 4ms/step - loss: 0.0171 - accuracy: 0.9962\n"
      ]
     }
    ],
@@ -2566,8 +2740,91 @@
     "                metrics=[\"accuracy\"])\n",
     "\n",
     "# Fit the model for 20 epochs (5 less than before)\n",
-    "history = model_9.fit(x_train, y_train, epochs=20)"
+    "history = model_9.fit(x_train, y_train, epochs=100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25/25 [==============================] - 0s 5ms/step - loss: 0.0218 - accuracy: 0.9950\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model_9.evaluate(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 0s 5ms/step - loss: 0.0186 - accuracy: 0.9950\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model_9.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 0s 7ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_preds = model_9.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[100,   1],\n",
+       "       [  0,  99]], dtype=int64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a confusion matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Create confusion matrix\n",
+    "confusion_matrix(y_test,  tf.round(y_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
